--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebStudio</title>
-    <link rel="icon" href="modern-normalize.min.css">
+    <title>Music Player</title>
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 <header>
-    
+
 </header>
