header main and footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>MusicPlayer</title>
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
+<body>
 <header>
+<div>
+    <nav>
 
+    </nav>
+</div>
 </header>
+
+<main>
+
+</main>
+
+    <footer>
+        
+    </footer>
+</body>
