--- a/index.html
+++ b/index.html
@@ -14,11 +14,28 @@
     </nav>
 </div>
 </header>
-
 <main>
-
+<div>
+    <ul>
+        <li> <a href=""> <img src="" alt=""> 
+            <p>All music</p>
+        </a>
+        <li> <a href=""> <img src="" alt=""> 
+            <p>Happy music</p>
+        </a>
+        <li> <a href=""> <img src="" alt=""> 
+            <p>Sad music</p>
+        </a>
+        <li> <a href=""> <img src="" alt=""> 
+            <p>Dance music</p>
+        </a>
+        <li> <a href=""> <img src="" alt=""> 
+            <p>Relax music</p>
+        </a>
+        </li>
+    </ul>
+</div>
 </main>
-
     <footer>
         
     </footer>
