--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
 <main>
 <div>
     <ul>
-        <li> <a href=""> <img src="" alt=""> 
+        <li> <a href=""> <img src="./images/allmusic.jpg" alt="allmusic"> 
             <p>All music</p>
         </a>
-        <li> <a href=""> <img src="" alt=""> 
+        <li> <a href=""> <img src="./images/coolcat.jpg" alt="coolcat"> 
             <p>Happy music</p>
         </a>
-        <li> <a href=""> <img src="" alt=""> 
+        <li> <a href=""> <img src="./images/sleepycat.jpg" alt="sleepycat"> 
             <p>Sad music</p>
         </a>
-        <li> <a href=""> <img src="" alt=""> 
+        <li> <a href=""> <img src="./images/angrycat.jpg" alt="angrycat"> 
             <p>Dance music</p>
         </a>
-        <li> <a href=""> <img src="" alt=""> 
+        <li> <a href=""> <img src="./images/hugscats.jpg" alt="hugscats"> 
             <p>Relax music</p>
         </a>
         </li>
@@ -37,6 +37,8 @@
 </div>
 </main>
     <footer>
-        
+        <div>
+
+        </div>
     </footer>
 </body>
