--- a/index.html
+++ b/index.html
@@ -5,31 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MusicPlayer</title>
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wdth,wght@87.5,500&family=Odibee+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wdth@87.5" rel="stylesheet">
+    
 </head>
 <body>
 <header>
 <div>
     <nav>
-<a href="./index.html">MusicPlayer</a>
+<a href="./index.html">Music Player</a>
     </nav>
 </div>
 </header>
 <main>
 <div>
-    <ul>
-        <li> <a href=""> <img src="./images/allmusic.jpg" alt="allmusic"> 
+    <ul class="music-player-list">
+        <li class="music-player-list-item"> <a href=""> <img src="./images/allmusic.jpg" alt="allmusic" width="336" height="330"> 
             <p>All music</p>
         </a>
-        <li> <a href=""> <img src="./images/coolcat.jpg" alt="coolcat"> 
+        <li class="music-player-list-item"> <a href=""> <img src="./images/coolcat.jpg" alt="coolcat" width="264" height="260"> 
             <p>Happy music</p>
         </a>
-        <li> <a href=""> <img src="./images/sleepycat.jpg" alt="sleepycat"> 
+        <li class="music-player-list-item"> <a href=""> <img src="./images/sleepycat.jpg" alt="sleepycat" width="264" height="260"> 
             <p>Sad music</p>
         </a>
-        <li> <a href=""> <img src="./images/angrycat.jpg" alt="angrycat"> 
+        <li class="music-player-list-item"> <a href=""> <img src="./images/angrycat.jpg" alt="angrycat" width="264" height="260"> 
             <p>Dance music</p>
         </a>
-        <li> <a href=""> <img src="./images/hugscats.jpg" alt="hugscats"> 
+        <li class="music-player-list-item"> <a href=""> <img src="./images/hugscats.jpg" alt="hugscats" width="264" height="260"> 
             <p>Relax music</p>
         </a>
         </li>
