--- a/index.html
+++ b/index.html
@@ -16,27 +16,32 @@
 <header>
 <div>
     <nav>
-<a href="./index.html">Music Player</a>
+<a href="./index.html" class="logo">Music Player</a>
     </nav>
 </div>
 </header>
 <main>
-<div>
+<div class="main-container">
     <ul class="music-player-list">
-        <li class="music-player-list-item"> <a href=""> <img src="./images/allmusic.jpg" alt="allmusic" width="336" height="330"> 
-            <p>All music</p>
+        <li class="music-player-list-item"> <a href=""> 
+            <img src="./images/allmusic.jpg" alt="allmusic" width="336" height="330"> 
+            <p class="music-player-list-item-text">All music</p>
         </a>
-        <li class="music-player-list-item"> <a href=""> <img src="./images/coolcat.jpg" alt="coolcat" width="264" height="260"> 
-            <p>Happy music</p>
+        <li class="music-player-list-item"> <a href=""> 
+            <img src="./images/coolcat.jpg" alt="coolcat" width="336" height="330"> 
+            <p class="music-player-list-item-text">Happy music</p>
         </a>
-        <li class="music-player-list-item"> <a href=""> <img src="./images/sleepycat.jpg" alt="sleepycat" width="264" height="260"> 
-            <p>Sad music</p>
+        <li class="music-player-list-item"> <a href=""> 
+            <img src="./images/sleepycat.jpg" alt="sleepycat" width="336" height="330"> 
+            <p class="music-player-list-item-text">Sad music</p>
         </a>
-        <li class="music-player-list-item"> <a href=""> <img src="./images/angrycat.jpg" alt="angrycat" width="264" height="260"> 
-            <p>Dance music</p>
+        <li class="music-player-list-item"> <a href=""> 
+            <img src="./images/angrycat.jpg" alt="angrycat" width="336" height="330"> 
+            <p class="music-player-list-item-text">Dance music</p>
         </a>
-        <li class="music-player-list-item"> <a href=""> <img src="./images/hugscats.jpg" alt="hugscats" width="264" height="260"> 
-            <p>Relax music</p>
+        <li class="music-player-list-item"> <a href=""> 
+            <img src="./images/hugscats.jpg" alt="hugscats" width="336" height="330"> 
+            <p class="music-player-list-item-text">Relax music</p>
         </a>
         </li>
     </ul>
