--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <header>
-<div>
+<div class="header-container">
     <nav>
 <a href="./index.html" class="logo">Music Player</a>
     </nav>
@@ -24,23 +24,23 @@
 <div class="main-container">
     <ul class="music-player-list">
         <li class="music-player-list-item"> <a href=""> 
-            <img src="./images/allmusic.jpg" alt="allmusic" width="336" height="330"> 
+            <img src="./images/allmusic.jpg" alt="allmusic" width="290" height="290"> 
             <p class="music-player-list-item-text">All music</p>
         </a>
         <li class="music-player-list-item"> <a href=""> 
-            <img src="./images/coolcat.jpg" alt="coolcat" width="336" height="330"> 
+            <img src="./images/coolcat.jpg" alt="coolcat" width="290" height="290"> 
             <p class="music-player-list-item-text">Happy music</p>
         </a>
         <li class="music-player-list-item"> <a href=""> 
-            <img src="./images/sleepycat.jpg" alt="sleepycat" width="336" height="330"> 
+            <img src="./images/sleepycat.jpg" alt="sleepycat" width="290" height="290"> 
             <p class="music-player-list-item-text">Sad music</p>
         </a>
         <li class="music-player-list-item"> <a href=""> 
-            <img src="./images/angrycat.jpg" alt="angrycat" width="336" height="330"> 
+            <img src="./images/angrycat.jpg" alt="angrycat" width="290" height="290"> 
             <p class="music-player-list-item-text">Dance music</p>
         </a>
         <li class="music-player-list-item"> <a href=""> 
-            <img src="./images/hugscats.jpg" alt="hugscats" width="336" height="330"> 
+            <img src="./images/hugscats.jpg" alt="hugscats" width="290" height="290"> 
             <p class="music-player-list-item-text">Relax music</p>
         </a>
         </li>
