--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
 <div class="main-container">
     <ul class="music-player-list">
         <li class="music-player-list-item"> <a href=""> 
-            <img src="./images/allmusic.jpg" alt="allmusic" width="290" height="290"> 
+            <img src="./images/allmusic.jpg" alt="allmusic" width="256" height="256" class="img-music-players"> 
             <p class="music-player-list-item-text">All music</p>
         </a>
         <li class="music-player-list-item"> <a href=""> 
-            <img src="./images/coolcat.jpg" alt="coolcat" width="290" height="290"> 
+            <img src="./images/coolcat.jpg" alt="coolcat" width="256" height="256" class="img-music-players"> 
             <p class="music-player-list-item-text">Happy music</p>
         </a>
         <li class="music-player-list-item"> <a href=""> 
-            <img src="./images/sleepycat.jpg" alt="sleepycat" width="290" height="290"> 
+            <img src="./images/sleepycat.jpg" alt="sleepycat" width="256" height="256" class="img-music-players"> 
             <p class="music-player-list-item-text">Sad music</p>
         </a>
         <li class="music-player-list-item"> <a href=""> 
-            <img src="./images/angrycat.jpg" alt="angrycat" width="290" height="290"> 
+            <img src="./images/angrycat.jpg" alt="angrycat" width="256" height="256" class="img-music-players"> 
             <p class="music-player-list-item-text">Dance music</p>
         </a>
         <li class="music-player-list-item"> <a href=""> 
-            <img src="./images/hugscats.jpg" alt="hugscats" width="290" height="290"> 
+            <img src="./images/hugscats.jpg" alt="hugscats" width="256" height="256" class="img-music-players"> 
             <p class="music-player-list-item-text">Relax music</p>
         </a>
         </li>
