--- a/index.html
+++ b/index.html
@@ -23,27 +23,41 @@
 <main>
 <div class="main-container">
     <ul class="music-player-list">
+        <div>
         <li class="music-player-list-item"> <a href=""> 
             <img src="./images/allmusic.jpg" alt="allmusic" width="256" height="256" class="img-music-players"> 
             <p class="music-player-list-item-text">All music</p>
         </a>
+    </li>
+    </div>
+    <div>
         <li class="music-player-list-item"> <a href=""> 
             <img src="./images/coolcat.jpg" alt="coolcat" width="256" height="256" class="img-music-players"> 
             <p class="music-player-list-item-text">Happy music</p>
         </a>
+    </li>
+    </div>
+    <div>
         <li class="music-player-list-item"> <a href=""> 
             <img src="./images/sleepycat.jpg" alt="sleepycat" width="256" height="256" class="img-music-players"> 
             <p class="music-player-list-item-text">Sad music</p>
         </a>
+    </li>
+    </div>
+    <div>
         <li class="music-player-list-item"> <a href=""> 
             <img src="./images/angrycat.jpg" alt="angrycat" width="256" height="256" class="img-music-players"> 
             <p class="music-player-list-item-text">Dance music</p>
         </a>
+    </li>
+    </div>
+        <div>
         <li class="music-player-list-item"> <a href=""> 
             <img src="./images/hugscats.jpg" alt="hugscats" width="256" height="256" class="img-music-players"> 
             <p class="music-player-list-item-text">Relax music</p>
         </a>
         </li>
+    </div>
     </ul>
 </div>
 </main>
