--- a/index.html
+++ b/index.html
@@ -56,3 +56,4 @@
         </div>
     </footer>
 </body>
+<noscript>Running JavaScript is not necessary in the HTML page ... FYI: your Feature to execute scripts is turned off.</noscript>
