--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <nav>
 <a href="./index.html" class="logo">Music Player</a>
     </nav>
+    <nav><button class="button"></button></nav>
 </div>
 </header>
 <main>
