--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <main>
 <div class="main-container">
     <ul class="music-player-list">
-        <li class="music-player-list-item"> <a href=""> 
+        <li class="music-player-list-item"> <a href="./childPages/All-music.html"> 
             <img src="./images/allmusic.jpg" alt="allmusic" width="256" height="256" class="img-music-players"> 
             <p class="music-player-list-item-text">All music</p>
         </a>
