--- a/childPages/All-music.html
+++ b/childPages/All-music.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MusicPlayer</title>
-    <link rel="stylesheet" type="text/css" href="./all-music-styles.css">
+    <link rel="stylesheet" type="text/css" href="../css/all-music-styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,9 +22,14 @@
 </header>
 <main>
 <div class="main-container">
-            <img src="./images/allmusic.jpg" alt="allmusic" width="512" height="512" class="img-music-players"> 
+    <section class="">
+            <img src="../images/allmusic.jpg" alt="allmusic" width="385 px" height="385 px" class="img-music-players"> 
             <p class="music-player-list-item-text">All music</p>
     </ul>
+</section>
+<section>
+
+</section>
 </div>
 </main>
     <footer>
