--- a/childPages/All-music.html
+++ b/childPages/All-music.html
@@ -22,7 +22,7 @@
 </header>
 <main>
 <div class="main-container">
-    <section class="">
+    <section class="section-img">
             <img src="../images/allmusic.jpg" alt="allmusic" width="385 px" height="385 px" class="img-music-players"> 
             <p class="music-player-list-item-text">All music</p>
     </ul>
