--- a/childPages/All-music.html
+++ b/childPages/All-music.html
@@ -23,12 +23,56 @@
 <main>
 <div class="main-container">
     <section class="section-img">
-            <img src="../images/allmusic.jpg" alt="allmusic" width="385 px" height="385 px" class="img-music-players"> 
+            <img src="../images/allmusic.jpg" alt="allmusic" width="385" height="385" class="img-music-players"> 
             <p class="music-player-list-item-text">All music</p>
     </ul>
 </section>
 <section>
+<div class="music">
+    <ul>
+        <li>
+            <div class="song-list-item">
+<img src="../images/angrycat.jpg" alt="" width="50" height="50">
+<p>Happy together</p>
+<p>The Turtles</p>
+</div>
+        </li>
+        <li>
 
+        </li>
+        <li>
+
+        </li>
+        <li>
+
+        </li>
+        <li>
+
+        </li>
+        <li>
+
+        </li>
+        <li>
+
+        </li>
+        <li>
+
+        </li>
+        <li>
+
+        </li>
+        <li>
+
+        </li>
+        <li>
+
+        </li>
+        <li>
+
+        </li>
+    </ul>
+
+</div>
 </section>
 </div>
 </main>
