--- a/childPages/Happy-music.html
+++ b/childPages/Happy-music.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All music</title>
+    <title>MusicPlayer</title>
     <link rel="stylesheet" type="text/css" href="../css/all-music-styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +23,7 @@
 <main>
 <div class="main-container">
     <section class="section-img">
-            <img src="../images/allmusic.jpg" alt="allmusic" width="385" height="385" class="img-music-players"> 
+            <img src="../images/coolcat.jpg" alt="allmusic" width="385" height="385" class="img-music-players"> 
             <p class="music-player-list-item-text">All music</p>
     </ul>
 </section>
