--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p class="music-player-list-item-text">All music</p>
         </a>
     </li>
-        <li class="music-player-list-item"> <a href=""> 
+        <li class="music-player-list-item"> <a href="./childPages/Happy-music.html"> 
             <img src="./images/coolcat.jpg" alt="coolcat" width="256" height="256" class="img-music-players"> 
             <p class="music-player-list-item-text">Happy music</p>
         </a>
