--- a/childPages/All-music.html
+++ b/childPages/All-music.html
@@ -23,7 +23,7 @@
 <main>
 <div class="main-container">
     <section class="section-img">
-            <img src="../images/allmusic.jpg" alt="allmusic" width="385" height="385" class="img-music-players"> 
+            <img src="../images/allmusic.jpg" alt="allmusic" width="330" height="330" class="img-music-players"> 
             <p class="music-player-list-item-text">All music</p>
     </ul>
 </section>
@@ -31,7 +31,7 @@
 <div class="music">
     <ul>
         <li>
-            <div class="song-list-item">
+            <div class="song-list-item-container">
 <img src="../images/angrycat.jpg" alt="" width="50" height="50">
 <p>Happy together</p>
 <p>The Turtles</p>
