--- a/childPages/All-music.html
+++ b/childPages/All-music.html
@@ -22,53 +22,124 @@
 </header>
 <main>
 <div class="main-container">
+
+    <!-- Album cover -->
     <section class="section-img">
             <img src="../images/allmusic.jpg" alt="allmusic" width="330" height="330" class="img-music-players"> 
             <p class="music-player-list-item-text">All music</p>
     </ul>
 </section>
+
+<!-- Buttons -->
+<section>
+    <ul class="buttons">
+        <li>
+<button class="snuffle-play">
+
+</button>
+        </li>
+        <li>
+<button class="play">
+
+</button>
+        </li>
+        <li>
+<button class="other-buttons">
+
+</button>
+        </li>
+    </ul>
+</section>
+
+<!-- Music -->
 <section>
 <div class="music">
-    <ul>
+    <ul class="all-songs-list">
         <li>
             <div class="song-list-item-container">
-<img src="../images/angrycat.jpg" alt="" width="50" height="50">
-<p>Happy together</p>
-<p>The Turtles</p>
+<img src="../images/angrycat.jpg" alt="" width="55" height="55" class="song-img">
+<p class="song-name">Happy together</p>
+<p class="song-artist">The Turtles</p>
 </div>
         </li>
+        
         <li>
+            <div class="song-list-item-container">
+                <img src="../images/angrycat.jpg" alt="" width="55" height="55" class="song-img">
+                <p class="song-name">Happy together</p>
+                <p class="song-artist">The Turtles</p>
+                </div>
 
         </li>
         <li>
-
+            <div class="song-list-item-container">
+                <img src="../images/angrycat.jpg" alt="" width="55" height="55" class="song-img">
+                <p class="song-name">Happy together</p>
+                <p class="song-artist">The Turtles</p>
+                </div>
         </li>
         <li>
-
+            <div class="song-list-item-container">
+                <img src="../images/angrycat.jpg" alt="" width="55" height="55" class="song-img">
+                <p class="song-name">Happy together</p>
+                <p class="song-artist">The Turtles</p>
+                </div>
         </li>
         <li>
-
+            <div class="song-list-item-container">
+                <img src="../images/angrycat.jpg" alt="" width="55" height="55" class="song-img">
+                <p class="song-name">Happy together</p>
+                <p class="song-artist">The Turtles</p>
+                </div>
         </li>
         <li>
-
+            <div class="song-list-item-container">
+                <img src="../images/angrycat.jpg" alt="" width="55" height="55" class="song-img">
+                <p class="song-name">Happy together</p>
+                <p class="song-artist">The Turtles</p>
+                </div>
         </li>
         <li>
-
+            <div class="song-list-item-container">
+                <img src="../images/angrycat.jpg" alt="" width="55" height="55" class="song-img">
+                <p class="song-name">Happy together</p>
+                <p class="song-artist">The Turtles</p>
+                </div>
         </li>
         <li>
-
+            <div class="song-list-item-container">
+                <img src="../images/angrycat.jpg" alt="" width="55" height="55" class="song-img">
+                <p class="song-name">Happy together</p>
+                <p class="song-artist">The Turtles</p>
+                </div>
         </li>
         <li>
-
+            <div class="song-list-item-container">
+                <img src="../images/angrycat.jpg" alt="" width="55" height="55" class="song-img">
+                <p class="song-name">Happy together</p>
+                <p class="song-artist">The Turtles</p>
+                </div>
         </li>
         <li>
-
+            <div class="song-list-item-container">
+                <img src="../images/angrycat.jpg" alt="" width="55" height="55" class="song-img">
+                <p class="song-name">Happy together</p>
+                <p class="song-artist">The Turtles</p>
+                </div>
         </li>
         <li>
-
+            <div class="song-list-item-container">
+                <img src="../images/angrycat.jpg" alt="" width="55" height="55" class="song-img">
+                <p class="song-name">Happy together</p>
+                <p class="song-artist">The Turtles</p>
+                </div>
         </li>
         <li>
-
+            <div class="song-list-item-container">
+                <img src="../images/angrycat.jpg" alt="" width="55" height="55" class="song-img">
+                <p class="song-name">Happy together</p>
+                <p class="song-artist">The Turtles</p>
+                </div>
         </li>
     </ul>
 
