--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
 <div class="main-container">
     <ul class="music-player-list">
         <li class="music-player-list-item"> <a href="./childPages/All-music.html"> 
-            <img src="./images/allmusic.jpg" alt="allmusic" width="256" height="256" class="img-music-players"> 
+            <img src="./images/allmusic.jpg" alt="allmusic" class="img-music-players"> 
             <p class="music-player-list-item-text">All music</p>
         </a>
     </li>
         <li class="music-player-list-item"> <a href="./childPages/Happy-music.html"> 
-            <img src="./images/coolcat.jpg" alt="coolcat" width="256" height="256" class="img-music-players"> 
+            <img src="./images/coolcat.jpg" alt="coolcat"  class="img-music-players"> 
             <p class="music-player-list-item-text">Happy music</p>
         </a>
     </li>
         <li class="music-player-list-item"> <a href=""> 
-            <img src="./images/sleepycat.jpg" alt="sleepycat" width="256" height="256" class="img-music-players"> 
+            <img src="./images/sleepycat.jpg" alt="sleepycat"  class="img-music-players"> 
             <p class="music-player-list-item-text">Sad music</p>
         </a>
     </li>
         <li class="music-player-list-item"> <a href=""> 
-            <img src="./images/angrycat.jpg" alt="angrycat" width="256" height="256" class="img-music-players"> 
+            <img src="./images/angrycat.jpg" alt="angrycat" class="img-music-players"> 
             <p class="music-player-list-item-text">Dance music</p>
         </a>
     </li>
         <li class="music-player-list-item"> <a href=""> 
-            <img src="./images/hugscats.jpg" alt="hugscats" width="256" height="256" class="img-music-players"> 
+            <img src="./images/hugscats.jpg" alt="hugscats"  class="img-music-players"> 
             <p class="music-player-list-item-text">Relax music</p>
         </a>
         </li>
