--- a/childPages/All-music.html
+++ b/childPages/All-music.html
@@ -25,7 +25,7 @@
 
     <!-- Album cover -->
     <section class="section-img">
-            <img src="../images/allmusic.jpg" alt="allmusic" width="330" height="330" class="img-music-players"> 
+            <img src="../images/allmusic.jpg" alt="allmusic" class="img-music-players"> 
             <p class="music-player-list-item-text">All music</p>
     </ul>
 </section>
@@ -57,89 +57,10 @@
     <ul class="all-songs-list">
         <li>
             <div class="song-list-item-container">
-<img src="../images/angrycat.jpg" alt="" width="55" height="55" class="song-img">
+<img src="../images/angrycat.jpg" alt=""  class="song-img">
 <p class="song-name">Happy together</p>
 <p class="song-artist">The Turtles</p>
 </div>
-        </li>
-        
-        <li>
-            <div class="song-list-item-container">
-                <img src="../images/angrycat.jpg" alt="" width="55" height="55" class="song-img">
-                <p class="song-name">Happy together</p>
-                <p class="song-artist">The Turtles</p>
-                </div>
-
-        </li>
-        <li>
-            <div class="song-list-item-container">
-                <img src="../images/angrycat.jpg" alt="" width="55" height="55" class="song-img">
-                <p class="song-name">Happy together</p>
-                <p class="song-artist">The Turtles</p>
-                </div>
-        </li>
-        <li>
-            <div class="song-list-item-container">
-                <img src="../images/angrycat.jpg" alt="" width="55" height="55" class="song-img">
-                <p class="song-name">Happy together</p>
-                <p class="song-artist">The Turtles</p>
-                </div>
-        </li>
-        <li>
-            <div class="song-list-item-container">
-                <img src="../images/angrycat.jpg" alt="" width="55" height="55" class="song-img">
-                <p class="song-name">Happy together</p>
-                <p class="song-artist">The Turtles</p>
-                </div>
-        </li>
-        <li>
-            <div class="song-list-item-container">
-                <img src="../images/angrycat.jpg" alt="" width="55" height="55" class="song-img">
-                <p class="song-name">Happy together</p>
-                <p class="song-artist">The Turtles</p>
-                </div>
-        </li>
-        <li>
-            <div class="song-list-item-container">
-                <img src="../images/angrycat.jpg" alt="" width="55" height="55" class="song-img">
-                <p class="song-name">Happy together</p>
-                <p class="song-artist">The Turtles</p>
-                </div>
-        </li>
-        <li>
-            <div class="song-list-item-container">
-                <img src="../images/angrycat.jpg" alt="" width="55" height="55" class="song-img">
-                <p class="song-name">Happy together</p>
-                <p class="song-artist">The Turtles</p>
-                </div>
-        </li>
-        <li>
-            <div class="song-list-item-container">
-                <img src="../images/angrycat.jpg" alt="" width="55" height="55" class="song-img">
-                <p class="song-name">Happy together</p>
-                <p class="song-artist">The Turtles</p>
-                </div>
-        </li>
-        <li>
-            <div class="song-list-item-container">
-                <img src="../images/angrycat.jpg" alt="" width="55" height="55" class="song-img">
-                <p class="song-name">Happy together</p>
-                <p class="song-artist">The Turtles</p>
-                </div>
-        </li>
-        <li>
-            <div class="song-list-item-container">
-                <img src="../images/angrycat.jpg" alt="" width="55" height="55" class="song-img">
-                <p class="song-name">Happy together</p>
-                <p class="song-artist">The Turtles</p>
-                </div>
-        </li>
-        <li>
-            <div class="song-list-item-container">
-                <img src="../images/angrycat.jpg" alt="" width="55" height="55" class="song-img">
-                <p class="song-name">Happy together</p>
-                <p class="song-artist">The Turtles</p>
-                </div>
         </li>
     </ul>
 
