--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
             <p class="music-player-list-item-text">Happy music</p>
         </a>
     </li>
-        <li class="music-player-list-item"> <a href=""> 
+        <li class="music-player-list-item"> <a href="./childPages/Sad-music.html"> 
             <img src="./images/sleepycat.jpg" alt="sleepycat"  class="img-music-players"> 
             <p class="music-player-list-item-text">Sad music</p>
         </a>
     </li>
-        <li class="music-player-list-item"> <a href=""> 
+        <li class="music-player-list-item"> <a href="/childPages/Dance-music.html"> 
             <img src="./images/angrycat.jpg" alt="angrycat" class="img-music-players"> 
             <p class="music-player-list-item-text">Dance music</p>
         </a>
     </li>
-        <li class="music-player-list-item"> <a href=""> 
+        <li class="music-player-list-item"> <a href="/childPages/Relax-music.html"> 
             <img src="./images/hugscats.jpg" alt="hugscats"  class="img-music-players"> 
             <p class="music-player-list-item-text">Relax music</p>
         </a>
