--- a/childPages/Happy-music.html
+++ b/childPages/Happy-music.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MusicPlayer</title>
+    <title>Happy music</title>
     <link rel="stylesheet" type="text/css" href="../css/all-music-styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,53 +22,45 @@
 </header>
 <main>
 <div class="main-container">
+
+    <!-- Album cover -->
     <section class="section-img">
-            <img src="../images/coolcat.jpg" alt="allmusic" width="385" height="385" class="img-music-players"> 
-            <p class="music-player-list-item-text">All music</p>
+            <img src="../images/coolcat.jpg" alt="Happy music" class="img-music-players"> 
+            <p class="music-player-list-item-text">Happy music</p>
     </ul>
 </section>
+
+<!-- Buttons -->
+<section>
+    <ul class="buttons">
+        <li>
+<button class="snuffle-play">
+
+</button>
+        </li>
+        <li>
+<button class="play">
+
+</button>
+        </li>
+        <li>
+<button class="other-buttons">
+
+</button>
+        </li>
+    </ul>
+</section>
+
+<!-- Music -->
 <section>
 <div class="music">
-    <ul>
+    <ul class="all-songs-list">
         <li>
-            <div class="song-list-item">
-<img src="../images/angrycat.jpg" alt="" width="50" height="50">
-<p>Happy together</p>
-<p>The Turtles</p>
+            <div class="song-list-item-container">
+<img src="../images/angrycat.jpg" alt=""  class="song-img">
+<p class="song-name">Happy together</p>
+<p class="song-artist">The Turtles</p>
 </div>
-        </li>
-        <li>
-
-        </li>
-        <li>
-
-        </li>
-        <li>
-
-        </li>
-        <li>
-
-        </li>
-        <li>
-
-        </li>
-        <li>
-
-        </li>
-        <li>
-
-        </li>
-        <li>
-
-        </li>
-        <li>
-
-        </li>
-        <li>
-
-        </li>
-        <li>
-
         </li>
     </ul>
 
