--- a/childPages/All-music.html
+++ b/childPages/All-music.html
@@ -62,6 +62,118 @@
 <p class="song-artist">The Turtles</p>
 </div>
         </li>
+        <li>
+            <div class="song-list-item-container">
+<img src="../images/angrycat.jpg" alt=""  class="song-img">
+<p class="song-name">Happy together</p>
+<p class="song-artist">The Turtles</p>
+</div>
+        </li>
+        <li>
+            <div class="song-list-item-container">
+<img src="../images/angrycat.jpg" alt=""  class="song-img">
+<p class="song-name">Happy together</p>
+<p class="song-artist">The Turtles</p>
+</div>
+        </li>
+        <li>
+            <div class="song-list-item-container">
+<img src="../images/angrycat.jpg" alt=""  class="song-img">
+<p class="song-name">Happy together</p>
+<p class="song-artist">The Turtles</p>
+</div>
+        </li>
+        <li>
+            <div class="song-list-item-container">
+<img src="../images/angrycat.jpg" alt=""  class="song-img">
+<p class="song-name">Happy together</p>
+<p class="song-artist">The Turtles</p>
+</div>
+        </li>
+        <li>
+            <div class="song-list-item-container">
+<img src="../images/angrycat.jpg" alt=""  class="song-img">
+<p class="song-name">Happy together</p>
+<p class="song-artist">The Turtles</p>
+</div>
+        </li>
+        <li>
+            <div class="song-list-item-container">
+<img src="../images/angrycat.jpg" alt=""  class="song-img">
+<p class="song-name">Happy together</p>
+<p class="song-artist">The Turtles</p>
+</div>
+        </li>
+        <li>
+            <div class="song-list-item-container">
+<img src="../images/angrycat.jpg" alt=""  class="song-img">
+<p class="song-name">Happy together</p>
+<p class="song-artist">The Turtles</p>
+</div>
+        </li>
+        <li>
+            <div class="song-list-item-container">
+<img src="../images/angrycat.jpg" alt=""  class="song-img">
+<p class="song-name">Happy together</p>
+<p class="song-artist">The Turtles</p>
+</div>
+        </li>
+        <li>
+            <div class="song-list-item-container">
+<img src="../images/angrycat.jpg" alt=""  class="song-img">
+<p class="song-name">Happy together</p>
+<p class="song-artist">The Turtles</p>
+</div>
+        </li>
+        <li>
+            <div class="song-list-item-container">
+<img src="../images/angrycat.jpg" alt=""  class="song-img">
+<p class="song-name">Happy together</p>
+<p class="song-artist">The Turtles</p>
+</div>
+        </li>
+        <li>
+            <div class="song-list-item-container">
+<img src="../images/angrycat.jpg" alt=""  class="song-img">
+<p class="song-name">Happy together</p>
+<p class="song-artist">The Turtles</p>
+</div>
+        </li>
+        <li>
+            <div class="song-list-item-container">
+<img src="../images/angrycat.jpg" alt=""  class="song-img">
+<p class="song-name">Happy together</p>
+<p class="song-artist">The Turtles</p>
+</div>
+        </li>
+        <li>
+            <div class="song-list-item-container">
+<img src="../images/angrycat.jpg" alt=""  class="song-img">
+<p class="song-name">Happy together</p>
+<p class="song-artist">The Turtles</p>
+</div>
+        </li>
+        <li>
+            <div class="song-list-item-container">
+<img src="../images/angrycat.jpg" alt=""  class="song-img">
+<p class="song-name">Happy together</p>
+<p class="song-artist">The Turtles</p>
+</div>
+        </li>
+        <li>
+            <div class="song-list-item-container">
+<img src="../images/angrycat.jpg" alt=""  class="song-img">
+<p class="song-name">Happy together</p>
+<p class="song-artist">The Turtles</p>
+</div>
+        </li>
+                <li>
+            <div class="song-list-item-container">
+<img src="../images/angrycat.jpg" alt=""  class="song-img">
+<p class="song-name">Happy together</p>
+<p class="song-artist">The Turtles</p>
+</div>
+        </li>
     </ul>
 
 </div>
