--- a/childPages/All-music.html
+++ b/childPages/All-music.html
@@ -33,18 +33,13 @@
 <!-- Buttons -->
 <section>
     <ul class="buttons">
+                <li>
+                    <button class="play">
+                
+                    </button>
+                </li>
         <li>
 <button class="snuffle-play">
-
-</button>
-        </li>
-        <li>
-<button class="play">
-
-</button>
-        </li>
-        <li>
-<button class="other-buttons">
 
 </button>
         </li>
@@ -53,6 +48,10 @@
 
 <!-- Music -->
 <section>
+    <svg width="15" height="15" class="svg-img-buttons">
+        <use href="../images/icons.svg">
+        </use>
+    </svg>
 <div class="music">
     <ul class="all-songs-list">
         <li>
@@ -62,6 +61,7 @@
 <p class="song-artist">The Turtles</p>
 </div>
         </li>
+        
     </ul>
 
 </div>
