--- a/childPages/all-music-player.html
+++ b/childPages/all-music-player.html
@@ -15,6 +15,7 @@
 
 </head>
 <body>
+    <script src="../script.js"></script>
 <header>
     <div class="header-container">
         <nav>
@@ -22,5 +23,24 @@
         </nav>
     </div>
 </header>
+<main>
+    <div class="music-container">
+        <div class="music-info">
+            <h4 id="title">Happy Together</h4>
+            <div class="progress-container">
+                <div class="progress">
+
+                </div>
+            </div>
+        </div>
+
+        <div class="img-container">
+            <img src="../images/Turtleshappytogether.jpg" alt="music-cover" id="cover">
+        </div>
+
+        <audio src="../Audio/music/TheTurtles-SoHappyTogether.mp3" id="audio"></audio>
+
+    </div>
+</main>
 </body>
 </html>
