--- a/childPages/all-music-player.html
+++ b/childPages/all-music-player.html
@@ -29,7 +29,7 @@
         <audio src="../Audio/music/TheTurtles-SoHappyTogether.mp3" id="audio"></audio>
 
         <div class="img-container">
-            <img src="../images/Turtleshappytogether.jpg" alt="music-cover">
+            <img src="../images/Turtleshappytogether.jpg" alt="music-cover" class="music-cover">
         </div>
 
         <div class="music-info">
