--- a/childPages/All-music.html
+++ b/childPages/All-music.html
@@ -41,7 +41,7 @@
         <audio src="../Audio/music/TheTurtles-SoHappyTogether.mp3" id="audio"></audio>
     
         <div class="img-container">
-            <img src="../images/Turtleshappytogether.jpg" alt="music-cover" class="music-cover">
+            <img src="../images/Turtleshappytogether.jpg" alt="music-cover" id="cover" class="music-cover">
         </div>
     
         <div class="music-info">
