--- a/childPages/All-music.html
+++ b/childPages/All-music.html
@@ -16,7 +16,6 @@
     
 </head>
 <body>
-    <script src="../script.js"></script>
 <header>
 <div class="header-container">
     <nav>
@@ -47,8 +46,8 @@
         <div class="music-info">
             <h4 id="title" class="music-title">Happy Together</h4>
             <h5 class="artist-title"> The Turtles</h5>
-            <div class="progress-container">
-                <div class="progress">
+            <div class="progress-container" id="progress-container">
+                <div class="progress" id="progress">
     
                 </div>
             </div>
@@ -94,5 +93,6 @@
         <div class="footer-container">
         </div>
     </footer>
+    <script src="../script.js"></script>
 </body>
-<noscript>Running JavaScript is not necessary in the HTML page ... FYI: your Feature to execute scripts is turned off.</noscript>
+
