--- a/childPages/All-music.html
+++ b/childPages/All-music.html
@@ -76,70 +76,70 @@
 <div class="music">
     <ul class="all-songs-list">
         <li>
-            <div class="song-list-item-container">
+            <div class="song-list-item-container" id="listSong">
 <img src="../images/Happy Together.jpg" alt="song-img"  class="song-img">
 <p class="song-name">Happy together</p>
 <p class="song-artist">The Turtles</p>
 </div>
         </li>
         <li>
-            <div class="song-list-item-container">
-                <img src="../images/Snap Out Of It.jpg" alt="song-img" class="song-img">
+            <div class="song-list-item-container" id="listSong">
+                <img src="../images/Snap Out Of It.jpg" alt="song-img" class="song-img" >
                 <p class="song-name">Snap Out Of It</p>
                 <p class="song-artist">Arctic Monkeys</p>
             </div>
         </li>
         <li>
-            <div class="song-list-item-container">
+            <div class="song-list-item-container" id="listSong">
                 <img src="../images/While You Wait For The Others.jpg" alt="song-img" class="song-img">
                 <p class="song-name">While You Wait For The Others</p>
                 <p class="song-artist">Grizzly Bear</p>
             </div>
         </li>
         <li>
-            <div class="song-list-item-container">
+            <div class="song-list-item-container" id="listSong">
                 <img src="../images/The Sweet Escape.jpg" alt="song-img" class="song-img">
                 <p class="song-name">The Sweet Escape</p>
                 <p class="song-artist">Gwen Stefani</p>
             </div>
         </li>
         <li>
-            <div class="song-list-item-container">
+            <div class="song-list-item-container" id="listSong">
                 <img src="../images/Lost In Paradise.jpg" alt="song-img" class="song-img">
                 <p class="song-name">Lost In Paradise</p>
                 <p class="song-artist">ALI</p>
             </div>
         </li>
         <li>
-            <div class="song-list-item-container">
+            <div class="song-list-item-container" id="listSong">
                 <img src="../images/Everyone Adores You At Least I Do.jpg" alt="song-img" class="song-img">
                 <p class="song-name">Everyone Adores You At Least I Do</p>
                 <p class="song-artist">Matt Maltese</p>
             </div>
         </li>
         <li>
-            <div class="song-list-item-container">
+            <div class="song-list-item-container" id="listSong">
                 <img src="../images/Nobody.jpg" alt="song-img" class="song-img">
                 <p class="song-name">Nobody</p>
                 <p class="song-artist">Mitski</p>
             </div>
         </li>
         <li>
-            <div class="song-list-item-container">
+            <div class="song-list-item-container" id="listSong">
                 <img src="../images/Good Old-Fashioned Lover Boy.jpg" alt="song-img" class="song-img">
                 <p class="song-name">Good Old-Fashioned Lover Boy</p>
                 <p class="song-artist">Queen</p>
             </div>
         </li>
         <li>
-            <div class="song-list-item-container">
+            <div class="song-list-item-container" id="listSong">
                 <img src="../images/Hidden In The Sand.jpg" alt="song-img" class="song-img">
                 <p class="song-name">Hidden In The Sand</p>
                 <p class="song-artist">Tally Hall</p>
             </div>
         </li>
         <li>
-            <div class="song-list-item-container">
+            <div class="song-list-item-container" id="listSong">
                 <img src="../images/The Blonde.jpg" alt="song-img" class="song-img">
                 <p class="song-name">The Blonde</p>
                 <p class="song-artist">TV Girl</p>
